--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab6)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(lab6 main.cpp AIBot.cpp joystick.cpp ScreenObject.h ScreenObject.cpp BatteryChargers.cpp BatteryChargers.h helper.h ServerFarmers.cpp ServerFarmers.h CaringCapacitors.cpp CaringCapacitors.h RebelResistors.cpp RebelResistors.h AIPoisonPill.cpp AIPoisonPill.h HappyInductors.cpp HappyInductors.h)
+add_executable(lab6 main.cpp AIBot.cpp joystick.cpp ScreenObject.h ScreenObject.cpp BatteryChargers.cpp BatteryChargers.h helper.h ServerFarmers.cpp ServerFarmers.h CaringCapacitors.cpp CaringCapacitors.h RebelResistors.cpp RebelResistors.h AIPoisonPill.cpp AIPoisonPill.h HappyInductors.cpp HappyInductors.h gameJingle.cpp)
